--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <div id="container">
 
     <div class="download">
-      <a href="http://github.com/kghose/jabda/zipball/master">
+      <a href="https://github.com/downloads/kghose/jabda/jabda_2011_08_01.zip">
         <img border="0" width="90" src="http://github.com/images/modules/download/zip.png"></a>
       <a href="http://github.com/kghose/jabda/tarball/master">
         <img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
