Changing download options

--- a/index.html
+++ b/index.html
@@ -37,9 +37,7 @@
 
     <div class="download">
       <a href="https://github.com/downloads/kghose/jabda/jabda_2011_08_01.zip">
-        <img border="0" width="90" src="http://github.com/images/modules/download/zip.png"></a>
-      <a href="http://github.com/kghose/jabda/tarball/master">
-        <img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
+        Windows exe bundle</a>
     </div>
 
     <h1><a href="http://github.com/kghose/jabda">jabda</a>
@@ -49,9 +47,9 @@
       A desktop personal journal (diary)
     </div>
 
-    <h2>Download</h2>
+    <h2>Source</h2>
     <p>
-      You can download this project in either
+      You can download the project source in either
       <a href="http://github.com/kghose/jabda/zipball/master">zip</a> or
       <a href="http://github.com/kghose/jabda/tarball/master">tar</a> formats.
     </p>
